--- a/index.html
+++ b/index.html
@@ -11,140 +11,165 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
     <title>Hudson Carolino</title>
   </head>
 
   <body>
+
+    <!-- <label for="inputTrocarModo">Trocar modo</label> -->
+    <input type="checkbox" id="inputTrocarModo" class="hidden">
+
     <main>
-      <div class="row">
-        <!-- conteúdos do lado esquerdo -->
-        <div class="column column--esquerda">
-          <div class="informacoesContatoPortfolio">
-            <figure class="informacoesContatoPortfolio__imagem">
-              <img src="./assets/img/hudson.png" alt="hudson" />
-              <figcaption>Imagem de perfil portfólio</figcaption>
-            </figure>
+      <div class="container">
 
-            <div class="informacoesContatoPortfolio__descricao">
-              <h1>Hudson Carolino</h1>
-              <h2>Desenvolvedor full-stack</h2>
+        <div class="row">
+          <!-- conteúdos do lado esquerdo -->
+          <div class="column column--esquerda">
+            <div class="informacoesContatoPortfolio">
+              <div class="container container--column">
 
-              <ul>
-                <li>
-                  <a href="malito:exemplo@gmail.com">exemplo@gmail.com</a>
-                </li>
+                <figure class="informacoesContatoPortfolio__imagem">
+                  <img src="./assets/img/hudson.png" alt="hudson" />
+                  <figcaption class="hidden">Imagem de perfil portfólio</figcaption>
+                </figure>
 
-                <li>
-                  <a href="tel:41997117122">41997117122</a>
-                </li>
+                <div class="informacoesContatoPortfolio__descricao">
+                  <h1>Hudson Carolino</h1>
+                  <h2>Desenvolvedor full-stack</h2>
 
-                <li>
-                  <a href="#">Av. 7 De Setembro, 34, Centro - Curitiba - PR</a>
-                </li>
-              </ul>
+                  <ul>
+                    <li>
+                      <a href="malito:exemplo@gmail.com">exemplo@gmail.com</a>
+                    </li>
+
+                    <li>
+                      <a href="tel:41997117122">41997117122</a>
+                    </li>
+
+                    <li>
+                      <a href="#">Av. 7 De Setembro, 34, Centro - Curitiba - PR</a>
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="informacoesContatoPortfolio__trocarModo">
+                  <label for="inputTrocarModo">
+                    <span></span>
+                  </label>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+          <!-- conteúdos do lado direito -->
+          <div class="column column--direita">
+            <div class="informacoesExperienciaPortfolio">
+              <div class="container container--column">
+
+                <!-- conteúdos  Perfil -->
+                <section class="informacoesExperienciaPortfolio__perfil">
+                  <h2>Perfil Profissional</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+                    vel cupiditate deleniti libero repudiandae, possimus in tempore
+                    alias voluptatum et quod repellendus aliquam. Quos iste,
+                    voluptates excepturi numquam quo eius!
+                  </p>
+                </section>
+
+                <!-- conteúdos  Especialidades -->
+                <section class="informacoesExperienciaPortfolio__especialidades">
+                  <h2>Especialidades</h2>
+                  <ul>
+                    <li>
+                      <p>HTML 5</p>
+                    </li>
+                    <li>
+                      <p>CSS 3</p>
+                    </li>
+                    <li>
+                      <p>JavaScript</p>
+                    </li>
+                    <li>
+                      <p>ReactJS</p>
+                    </li>
+                    <li>
+                      <p>Python</p>
+                    </li>
+                  </ul>
+                </section>
+
+                <!-- conteúdos  FORMAÇÃO -->
+                <section class="informacoesExperienciaPortfolio__formacao">
+                  <h2>Cursos</h2>
+                  <ul>
+                    <li>
+                      <p>Semana Start Sua Carreira Dev - Kenzie Academy Brasil</p>
+                    </li>
+                    <li>
+                      <p>Zero ao Python - Kenzie Academy Brasil</p>
+                    </li>
+                    <li>
+                      <p>Zero ao Javascript - Kenzie Academy Brasil</p>
+                    </li>
+                    <li>
+                      <p>Olimpíadas da Programação - Kenzie Academy Brasil</p>
+                    </li>
+                    <li>
+                      <p>Full-stack completo - Kenzie Academy Brasil</p>
+                    </li>
+                  </ul>
+                </section>
+
+                <!-- conteúdos  Experiência -->
+                <section class="informacoesExperienciaPortfolio__experiencia">
+                  <h2>Experiência</h2>
+                  <ul>
+                    <li>
+                      <h3>Facilitador de treinamento</h3>
+                      <strong
+                        >Nome da empresaKenzie Academy Brasil - Tempo
+                        integral</strong
+                      >
+                      <p>
+                        Período do empregomar. de 2020 – o momento Duração 1 ano 1
+                        mês Localidade Curitiba, Paraná
+                      </p>
+                    </li>
+                    <li>
+                      <h3>Facilitador de treinamento</h3>
+                      <strong
+                        >Nome da empresaKenzie Academy Brasil - Tempo
+                        integral</strong
+                      >
+                      <p>
+                        Período do empregomar. de 2020 – o momento Duração 1 ano 1
+                        mês Localidade Curitiba, Paraná
+                      </p>
+                    </li>
+                    <li>
+                      <h3>Facilitador de treinamento</h3>
+                      <strong
+                        >Nome da empresaKenzie Academy Brasil - Tempo
+                        integral</strong
+                      >
+                      <p>
+                        Período do empregomar. de 2020 – o momento Duração 1 ano 1
+                        mês Localidade Curitiba, Paraná
+                      </p>
+                    </li>
+                  </ul>
+                </section>
+
+              </div>
             </div>
           </div>
         </div>
 
-        <!-- conteúdos do lado direito -->
-        <div class="column column--direita">
-          <div class="informacoesExperienciaPortfolio">
-            <!-- conteúdos  Perfil -->
-            <section class="informacoesExperienciaPortfolio__perfil">
-              <h2>Perfil Profissional</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-                vel cupiditate deleniti libero repudiandae, possimus in tempore
-                alias voluptatum et quod repellendus aliquam. Quos iste,
-                voluptates excepturi numquam quo eius!
-              </p>
-            </section>
-
-            <!-- conteúdos  Especialidades -->
-            <section class="informacoesExperienciaPortfolio__especialidades">
-              <h2>Especialidades</h2>
-              <ul>
-                <li>
-                  <p>HTML 5</p>
-                </li>
-                <li>
-                  <p>CSS 3</p>
-                </li>
-                <li>
-                  <p>JavaScript</p>
-                </li>
-                <li>
-                  <p>ReactJS</p>
-                </li>
-                <li>
-                  <p>Python</p>
-                </li>
-              </ul>
-            </section>
-
-            <!-- conteúdos  FORMAÇÃO -->
-            <section class="informacoesExperienciaPortfolio__formacao">
-              <h2>Cursos</h2>
-              <ul>
-                <li>
-                  <p>Semana Start Sua Carreira Dev - Kenzie Academy Brasil</p>
-                </li>
-                <li>
-                  <p>Zero ao Python - Kenzie Academy Brasil</p>
-                </li>
-                <li>
-                  <p>Zero ao Javascript - Kenzie Academy Brasil</p>
-                </li>
-                <li>
-                  <p>Olimpíadas da Programação - Kenzie Academy Brasil</p>
-                </li>
-                <li>
-                  <p>Full-stack completo - Kenzie Academy Brasil</p>
-                </li>
-              </ul>
-            </section>
-
-            <!-- conteúdos  Experiência -->
-            <section>
-              <h2>Experiência</h2>
-              <ul>
-                <li>
-                  <h3>Facilitador de treinamento</h3>
-                  <strong
-                    >Nome da empresaKenzie Academy Brasil - Tempo
-                    integral</strong
-                  >
-                  <p>
-                    Período do empregomar. de 2020 – o momento Duração 1 ano 1
-                    mês Localidade Curitiba, Paraná
-                  </p>
-                </li>
-                <li>
-                  <h3>Facilitador de treinamento</h3>
-                  <strong
-                    >Nome da empresaKenzie Academy Brasil - Tempo
-                    integral</strong
-                  >
-                  <p>
-                    Período do empregomar. de 2020 – o momento Duração 1 ano 1
-                    mês Localidade Curitiba, Paraná
-                  </p>
-                </li>
-                <li>
-                  <h3>Facilitador de treinamento</h3>
-                  <strong
-                    >Nome da empresaKenzie Academy Brasil - Tempo
-                    integral</strong
-                  >
-                  <p>
-                    Período do empregomar. de 2020 – o momento Duração 1 ano 1
-                    mês Localidade Curitiba, Paraná
-                  </p>
-                </li>
-              </ul>
-            </section>
-          </div>
-        </div>
       </div>
     </main>
 
