--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
-    <title>Hudson Carolino</title>
+    <title>Sidney Pedro da Silva/title>
   </head>
 
   <body>
@@ -42,7 +42,7 @@
 
                   <ul>
                     <li>
-                      <a href="malito:exemplo@gmail.com">exemplo@gmail.com</a>
+                      <a href="malito:sidney_univesp@gmail.com">sidney_univesp@gmail.com</a>
                     </li>
 
                     <li>
@@ -50,7 +50,7 @@
                     </li>
 
                     <li>
-                      <a href="#">Av. 7 De Setembro, 34, Centro - Curitiba - PR</a>
+                      <a href="#">Av. Madison, 100, - Manhattan - NY</a>
                     </li>
                   </ul>
                 </div>
@@ -108,10 +108,10 @@
                   <h2>Cursos</h2>
                   <ul>
                     <li>
-                      <p>Semana Start Sua Carreira Dev - Kenzie Academy Brasil</p>
+                      <p>Engenharia de Computação - UNIVESP</p>
                     </li>
                     <li>
-                      <p>Zero ao Python - Kenzie Academy Brasil</p>
+                      <p>Técnico em Informática - SENAC</p>
                     </li>
                     <li>
                       <p>Zero ao Javascript - Kenzie Academy Brasil</p>
